...
final class PaymentMethodPresenter: TitleAndThumbTablePresenter {
    weak var view: PaymentMethodView!
    private let interactor: PaymentMethodInteractor
    private var paymentMethods: [PaymentMethod] = []
    
    var elementCount: Int { return paymentMethods.count }
    var title: String { return "Select Payment Method".localized }
    var cancelTitle: String { return "Cancel".localized }
    
    init(interactor: PaymentMethodInteractor) {
        self.interactor = interactor
    }
    
...
